changed sizes of elements in score board to fix overflow

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ body {
     flex-direction: column;
     gap: 20px;
     width: 400px;
+    margin-left: 30px;
 }
 .btn {
     min-height: 150px;
@@ -75,7 +76,6 @@ img {
 }
 .computer-choice {
     background: rgb(218, 238, 238);
-    min-height: 150px;
     width: 400px;
     margin-right: 25px;
 }
@@ -84,7 +84,7 @@ img {
 .score-board {
     background: rgb(22, 127, 212);
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-bottom: 0px;
     padding-bottom: 0px;
     min-height: 20%;
@@ -92,22 +92,24 @@ img {
 .points {
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
 .point {
-    min-height: 50px;
-    width: 50px;
+    height: 25px;
+    width: 25px;
     background-color: rgb(10, 52, 71);
-    border-radius: 25px;
+    border-radius: 5px;
 }
 /*for green points, use rbg 144, 206, 125*/
 .winner {
     color: rgb(206, 182, 50);
-    font-size: 6ch;
+    font-size: 70px;
 }
 .icon {
     align-self: center;
-    font-size: 9ch;
+    font-size: 70px;
     padding: 15px 10px;
 }
 .user {
